[package]
name = "connection"
version = "0.1.0"
authors = [
    "Dirk friedenberger <projekte@frittenburger.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"


[dependencies]
async-trait = "0.1.42"
tokio = { version = "1.2.0", features = ["rt", "io-util", "net", "sync", "fs"] }
tokio-tls = "0.3.0"
futures = "0.3.4"
hex = "0.4.2"
log = "0.4.8"

[dev-dependencies]
tokio = { version = "1.2.0", features = ["macros"] }
